[package]
name = "rustyjack"
description = "A single-player console blackjack game"
version = "1.0.0"
authors = [ "joaquinmaier" ]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
rand = "0.8.5"
terminal_size = "0.2.6"

