[package]
name = "rustyjack"
description = "A single-player console blackjack game"
version = "1.0.1"
authors = [ "joaquinmaier" ]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "2.1.0"
rand = "0.9.2"
terminal_size = "0.4.2"

